--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chart.js": "2.8.0",
     "core-js": "3.2.1",
     "express": "^4.17.1",
+    "firebase": "^7.14.5",
     "ngx-bootstrap": "^5.6.1",
     "nouislider": "11.1.0",
     "path": "^0.12.7",
