--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "firebase": "^7.14.5",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-captcha": "^8.0.1",
     "nouislider": "11.1.0",
     "path": "^0.12.7",
     "rxjs": "6.5.4",
