--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@angular/platform-browser": "9.0.7",
     "@angular/platform-browser-dynamic": "9.0.7",
     "@angular/router": "9.0.7",
+    "angular2-csv": "^0.2.9",
     "chart.js": "2.8.0",
     "core-js": "3.2.1",
     "express": "^4.17.1",
     "firebase": "^7.14.5",
+    "jspdf": "^1.5.3",
     "ngx-bootstrap": "^5.6.1",
     "ngx-captcha": "^8.0.1",
     "nouislider": "11.1.0",
