--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "9.0.7",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "angular2-csv": "^0.2.9",
+    "angular2-highcharts": "^0.5.5",
     "bootstrap": "^4.4.0",
     "chart.js": "2.8.0",
     "core-js": "3.2.1",
